<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MagNG</string>
    <string name="sign_in"> Sign in</string>
    <string name="sign_up"> Sign up</string>
    <string name="email"> Email</string>
    <string name="Email"> Email:</string>
    <string name="password"> Password</string>
    <string name="forgotPassword"> Forgot Password? </string>
    <string name="Continue"> Continue </string>
    <string name="confirm_pass"> Confirm Password</string>
    <string name="home"> Home</string>
    <string name="category"> Category</string>
    <string name="read"> Read </string>
    <string name="search"> Search</string>
    <string name="help"> Help</string>
    <string name="about"> About </string>
    <string name="categories"> Categories</string>
    <string name="log_out"> LogOut</string>
    <string name="mode"> Dark Mode</string>
    <string name="terms"> terms and conditions</string>
    <string name="notification"> Notification</string>
    <string name="textDescription"> Share your magazines, with friends and family, see what others are reading. </string>
    <string name="next"> Next </string>
    <string name="phone"> Phone: </string>
    <string name="magzNumb"> 2100 Magazines</string>
    <string name="profile"> Profile</string>
    <string name="username"> Peter Olugbenga</string>
    <string name="registering"> By registering you accept our</string>
    <string name="signUpText"> Don\'t have an account?</string>
    <string name="registerText"> Click here to Sign Up</string>
    <string name="signInText"> Already have an account?</string>
    <string name="clickRegister"> Click here to Sign In</string>
</resources>