<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/red"/>

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHead"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/sign_in"/>

    <EditText
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn"
        android:layout_marginTop="30dp"
        android:textColor="@color/editText"
        android:drawableEnd="@drawable/ic_email"
        android:paddingEnd="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_round"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textSize="18sp"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textEmail"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableEnd="@drawable/ic_eye"
        android:paddingEnd="25dp"
        android:textColor="@color/editText"
        android:background="@drawable/edit_round"
        android:inputType="textVisiblePassword"
        android:hint="@string/password"
        android:textSize="18sp"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/forgotPassword"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        android:layout_marginTop="20dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:text="@string/Continue"
        android:background="@drawable/button_round"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/signUpText"/>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/blue"
            android:text="@string/registerText"
            android:layout_marginStart="5dp"/>


    </LinearLayout>









</androidx.constraintlayout.widget.ConstraintLayout>