<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textSize="45sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        android:text="@string/sign_up"
        android:textAllCaps="true"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:hint="Username"
        android:textColor="#000000"
        android:textSize="20sp"
        android:inputType="text"
        android:textColorHint="#4E4343"
        android:paddingStart="20dp"
        android:background="@drawable/edit_round"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/email"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textColorHint="#4E4343"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_round"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:background="@drawable/edit_round"
        android:hint="@string/password"
        android:textColorHint="#4E4343"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:drawableEnd="@drawable/ic_eye"
        android:paddingEnd="20dp"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edit_round"
        android:hint="@string/confirm_pass"
        android:textColorHint="#4E4343"
        android:paddingLeft="20dp"
        android:textSize="20sp"
        android:drawableEnd="@drawable/ic_eye"
        android:paddingEnd="20dp"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="35dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:clickable="true"
        android:background="@drawable/button_round"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/signInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/signInText"/>

        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/blue"
            android:text="@string/clickRegister"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInLayout"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/registering"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/blue"
            android:text="@string/terms"
            android:layout_marginStart="5dp"/>



    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>