<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/title_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#4E4343"
            android:text="@string/profile"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="7dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/profile_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/profile_pic"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:textColor="#4E4343"
            android:textStyle="bold"
            android:text="@string/username"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/profile_picture"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/magNumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#4E4343"
            android:layout_below="@id/userName"
            android:layout_toRightOf="@id/profile_picture"
            android:layout_marginStart="20dp"
            android:textStyle="normal"
            android:text="@string/magzNumb"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#4E4343"
            android:layout_below="@id/magNumb"
            android:layout_toRightOf="@id/profile_picture"
            android:layout_marginStart="20dp"
            android:textStyle="normal"
            android:text="@string/Email"/>

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/profile_picture"
            android:layout_below="@id/email"
            android:layout_marginStart="20dp"
            android:textStyle="normal"
            android:textSize="15sp"
            android:textColor="#4E4343"
            android:text="@string/phone"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile"
        android:layout_marginTop="20dp"
        android:background="@drawable/profile_background"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/notifyIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/notification_icon"
            android:layout_marginTop="13dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="13dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/notification"
            android:textColor="#4E4343"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification"
        android:layout_marginTop="20dp"
        android:background="@drawable/profile_background"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dark_mode"
            android:layout_marginTop="13dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="13dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mode"
            android:textColor="#4E4343"
            android:textSize="15sp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            app:thumbTint="#4E4343"
            android:visibility="visible"
            app:trackTint="@color/white"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/terms_conditions"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mode"
        android:layout_marginTop="20dp"
        android:background="@drawable/profile_background"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/terms_icon"
            android:layout_marginTop="13dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="13dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/terms"
            android:textColor="#4E4343"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms_conditions"
        android:layout_marginTop="20dp"
        android:background="@drawable/profile_background"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/help_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/help_icon"
            android:layout_marginTop="13dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="13dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/help"
            android:textColor="#4E4343"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/About"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help"
        android:layout_marginTop="20dp"
        android:background="@drawable/profile_background"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/about_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/about"
            android:layout_marginTop="13dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="13dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/about"
            android:textColor="#4E4343"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/logOut"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/About"
        android:layout_marginTop="20dp"
        android:background="@drawable/profile_background"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/logOut_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/log_icon"
            android:layout_marginTop="13dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="13dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/log_out"
            android:textColor="#4E4343"
            android:textSize="15sp"/>

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>